dorabotky_projecta_po_revyu

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </ul>
       </nav>
 
-      <h1 class="header__text">no focus</h1>
+      <h1 class="main-title">no focus</h1>
       <p class="textblock title-decor">
         Что делать, когда не можешь делать ничего<br>
         Или почему нам так сложно сконцентрироваться, особенно когда очень надо
@@ -169,7 +169,7 @@
     </main>
 
     <footer class="footer decorated-zone">
-      <h2 class="header__text footer__text">focus</h2>
+      <h2 class="main-title footer__text">focus</h2>
     </footer>
     <script src="./scripts/script.js"></script>
   </body>
