--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </nav>
 
       <h1 class="main-title">no focus</h1>
-      <p class="textblock title-decor">
+      <p class="header__subtitle title-decor decor__margin">
         Что делать, когда не можешь делать ничего<br>
         Или почему нам так сложно сконцентрироваться, особенно когда очень надо
       </p>
@@ -159,11 +159,11 @@
       <section class="gallery">
         <h2 class="text__block-title title-decor">А можно в картинках?</h2>
         <div class="images">
-          <img class="image" src="./images/sunset.png" alt="Изображение заката" loading="lazy">
-          <img class="image" src="./images/ice-cream.png" alt="Изображение мороженого" loading="lazy">
-          <img class="image" src="./images/tape.png" alt="Изображение звуковой касеты" loading="lazy">
-          <img class="image" src="./images/books.png" alt="Изображение книг" loading="lazy">
-          <img class="image" src="./images/street.png" alt="Изображение улицы" loading="lazy">
+          <img class="image image-1" src="./images/sunset.png" alt="Изображение заката" loading="lazy">
+          <img class="image image-2" src="./images/ice-cream.png" alt="Изображение мороженого" loading="lazy">
+          <img class="image image-3" src="./images/tape.png" alt="Изображение звуковой касеты" loading="lazy">
+          <img class="image image-4" src="./images/books.png" alt="Изображение книг" loading="lazy">
+          <img class="image image-5" src="./images/street.png" alt="Изображение улицы" loading="lazy">
         </div>
       </section>
     </main>
