pravki_article_grid

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </nav>
 
       <h1 class="main-title">no focus</h1>
-      <p class="header__subtitle title-decor decor__margin">
+      <p class="header__subtitle title-decor decor__indentation">
         Что делать, когда не можешь делать ничего<br>
         Или почему нам так сложно сконцентрироваться, особенно когда очень надо
       </p>
@@ -75,25 +75,25 @@
       </section>
 
       <section class="block horizontal">
-        <h2 class="title">Что снижает концентрацию внимания?</h2>
-        <div class="blocks">
-          <article class="text__block">
+        <h2 class="title title__what">Что снижает концентрацию внимания?</h2>
+        <div class="blocks__flexible">
+          <article class="text_article">
             <h3 class="text__block-title title-decor">Многозадачность</h3>
-            <p class="text__block-description">
+            <p class="text__block-description text__article">
               Как концентрация может снижаться из-за… концентрации? Любая стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш мозг постоянно «сканировать» окружающую среду на предмет опасности. Например, читать новости
               вместо работы. Но быть собранными всё время — невозможно. Концентрация — мышца, и она может не выдержать, если не давать ей отдохнуть.
             </p>
           </article>
 
-          <article class="text__block">
+          <article class="text_article">
             <h3 class="text__block-title title-decor">Еда</h3>
-            <p class="text__block-description">
+            <p class="text__block-description text__article">
               «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно доставляют в мозг энергию и помогают ему лучше работать. Но уходит эта энергия также быстро, как и приходит. А мы в результате попадаем на «углеводные качели»: как
               только действие «быстрых углеводов» заканчивается, мы чувствуем усталость и сонливость. И хотим ещё больше быстрых углеводов.
             </p>
           </article>
 
-          <article class="text__block">
+          <article class="text_article">
             <h3 class="text__block-title title-decor">Гаджеты</h3>
             <p class="text__block-description">
               Да-да, это та самая ситуация, когда на экране ноутбука — код, в наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными утятами. В результате мозг пытается переключиться с одной задачи на другую — и просто не
